// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatterportTagSync should render correctly 1`] = `
<div>
  <div
    data-mocked="Popover"
    position="top"
    triggertype="custom"
  >
    <div>
      <div
        data-mocked="StatusIndicator"
        data-testid="sync-button-status"
        type="loading"
      >
        Syncing tags
      </div>
    </div>
    <div
      data-mocked="Button"
      data-testid="matterport-tag-sync-button"
    >
      Sync Matterport Tags
    </div>
  </div>
</div>
`;

exports[`MatterportTagSync when dynamic scene is enabled should render failure status 1`] = `
<div
  data-mocked="StatusIndicator"
  data-testid="sync-button-status"
  type="error"
>
  Tags sync failed
</div>
`;

exports[`MatterportTagSync when dynamic scene is enabled should render success status 1`] = `
<div
  data-mocked="StatusIndicator"
  data-testid="sync-button-status"
  type="success"
>
  Tags sync successful
</div>
`;
